# bookstore-django

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: cd.yml  ci.yml  code-review.yml
api/: factories.py  pagination.py  urls.py  views.py
api/management/commands/: seed.py
api/migrations/: 0001_initial.py  0002_order.py
api/models/: __init__.py  book.py  order.py
api/serializers/: __init__.py  order_serializer.py
api/templates/api/: home.html
api/tests/: test_book.py  test_book_serializer.py  test_book_viewset.py  test_pagination.py  test_token_auth.py
api/viewsets/: __init__.py  book_viewset.py  order_viewset.py  store_info_viewset.py
bookstore/: settings.py  urls.py
